tests/netconvert/import/XML/errors/broken_edge/edge#type__empty4/errors.netconvert
Error: Attribute 'type' in definition of edge '4' is empty.
Quitting (on error).
